# 143B_P1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt
.github/workflows/: cmake-single-platform.yml
include/: ArrayMap.h  Manager.h  PCB.h  PriorityRL.h  RCB.h  Scheduler.h
src/: Manager.cpp  PCB.cpp  PriorityRL.cpp  RCB.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp
tests/data/: input.txt  sample-input-SQ24.txt  sample-output.txt
